<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kamaii Rider</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibXVsdGlzY29wZSIsImEiOiJja2N2eDNkeTQwOGswMndxbGsyNmsxZ2NqIn0.THAudbj7ZULmoP29oj8GIw</string>
    <string name="bottom_sheet_option_heading">Select Photo</string>
    <string name="login">Login</string>
    <string name="bottom_sheet_option_camera">Camera</string>
    <string name="bottom_sheet_option_gallery">Gallery</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="your_review">Your Review*</string>
    <string name="cancel">Cancel</string>
    <string name="payment_info">Payment Information</string>
    <string name="finish_job">Finish Job</string>
    <string name="intro_1">Welcome..</string>
    <string name="intro_2">Welcome..</string>
    <string name="intro_3">Welcome..</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="action_camera">Camera</string>
    <string name="invoice">Invoice</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirmed</string>
    <string name="acc">Accepted</string>
    <string name="curent">Current</string>
    <string name="rej">Rejected</string>
    <string name="com">Completed</string>
    <string name="dec">Decline</string>
    <string name="dec_msg">Are you sure you want to decline this appointment?</string>
    <string name="acc_msg">Are you sure you want to Accept this appointment?</string>
    <string name="comp">Complete</string>
    <string name="close_msg">Are your sure you want to close Kamaii Rider?</string>
    <string name="yes">YES!</string>
    <string name="no">NO</string>
    <string name="skip">Skip</string>
    <string name="my_profile">My Profile</string>
    <string name="promotion">My Promotion</string>
    <string name="select_services">Select Services</string>
    <string name="serviceee">Service</string>
    <string name="select_img">Select Image From</string>
    <string name="select_pic">Select Picture</string>
    <string name="job_comleted">Order Completed</string>
    <string name="jobs_comleted">Orders Completed</string>
    <string name="completion">Completion</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="rate">Rate</string>
    <string name="hr">/hr</string>
    <string name="fix_rate">Fix Rate</string>
    <string name="fixed_rate">fixed rate</string>
    <string name="commis_msg"> commission will be added into your hourly rate. It will vary according to category selection. Category rate :</string>
    <string name="select_cate">Select Category</string>
    <string name="val_name">Please enter name.</string>
    <string name="val_location">Please enter location.</string>
    <string name="val_category">Please enter Category.</string>
    <string name="val_iid">Please Select Invoice Id.</string>
    <string name="val_subcatogry">Please enter Sub Category.</string>
    <string name="val_sublevelcatogry">Please enter Sub Level Category.</string>
    <string name="val_sname">Please enter Service Name.</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter comment</string>
    <string name="val_email">Please enter valid email id.</string>
    <string name="val_mobile">Please enter Valid mobile No.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="my_appoin">My Appointments</string>
    <string name="customer_booking">Current Booking</string>
    <string name="dec_cpas">Decline</string>
    <string name="decline_msg">Are you sure you want to decline request?</string>
    <string name="get_discount">Get Discount</string>
    <string name="code_copy">Code Copy</string>
    <string name="referral_msg">Hello, this is my Referral Code</string>
    <string name="opss_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="support">Support</string>
    <string name="app_update">About Kamaii\'s</string>
    <string name="val_title">Please enter title.</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="addrefer">Add Refer Customer</string>
    <string name="tvideo">Training Video</string>
    <string name="imagesoffline">Pending Food Photo</string>
    <string name="viewrefer">View Refer Customer</string>
    <string name="my_earnings">My Earnings</string>
    <string name="my_promotion">My Promotion</string>
    <string name="earning_graph">Earning Graph</string>
    <string name="payment">Payment</string>
    <string name="process_payment">Are you sure want to process your payment?</string>
    <string name="jobs">Find Jobs</string>
    <string name="bookings">Order Details</string>
    <string name="cabbookings">My Order</string>
    <string name="home">Home</string>
    <string name="job_title">Job Title:</string>
    <string name="date">Date:</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_price">Please enter price.</string>
    <string name="val_pnumber">Please enter Rider Number.</string>
    <string name="inprogres">Inprogress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="start_app">Are you sure do you want to start the application?</string>
    <string name="start">Start</string>
    <string name="service">Invoice Id #</string>
    <string name="Cancel_msg">This booking cancels due to the rider not available or reject your request so If you have debited any amount refund your wallet account. Please try again.</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">Duration:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="sign_up">REGISTER</string>
    <string name="sign_in">LOG IN</string>
    <string name="payment1">Payment ?</string>
    <string name="select_your_payment_mode">Select your payment mode</string>
    <string name="about">About</string>
    <string name="qualification">Qualification</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">SUBMIT</string>
    <string name="apply_code">Apply Code</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="delete">Delete</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="today_booking">Today`s Order</string>
    <string name="gender">Gender</string>
    <string name="password_change">Change Password</string>
    <string name="signout">Sign Out</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotten_password">Forgot Password?</string>
    <string name="didn_t_have_any_account">Don\'t have Kamaii Rider account?</string>
    <string name="do_you_have_an_account_already">Do you have and account already?</string>
    <string name="job_id">Job ID:</string>
    <string name="services_type">Services type:</string>
    <string name="apply">APPLY</string>
    <string name="reject1">Reject</string>
    <string name="start_job">Start Job</string>
    <string name="inprogress">Inprogress</string>
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="review_by">Review By</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="cancel1">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="apply_job">Apply Job</string>
    <string name="write_description">Short Description about yourself and your business</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="edit_personal_information">Business Information</string>
    <string name="basic_information">Basic Information</string>
    <string name="select_your_speciality">Select Your Speciality</string>
    <string name="your_name">Your Name</string>
    <string name="business_name">Business Name</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_city">City</string>
    <string name="your_country">Your Country</string>
    <string name="your_location">Your Location</string>
    <string name="add_product">Add Service</string>
    <string name="product_name">Service Name</string>
    <string name="add_qualification">Add Qualification</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select">Select</string>
    <string name="search_by_job">Search by Job Title</string>
    <string name="search_by_cus">Search</string>
    <string name="no_jobs_applied">NO JOBS APPLIED</string>
    <string name="no_appointment_found">NO APPOINTMENT FOUND</string>
    <string name="no_jobs_found">NO JOBS FOUND</string>
    <string name="no_booking_found">NO Order FOUND</string>
    <string name="no_chat_history_found">NO CHAT HISTORY FOUND</string>
    <string name="no_notification_found">NO NOTIFICATION FOUND</string>
    <string name="new_request_found">NEW REQUEST FOUND</string>
    <string name="working_time">Working Time</string>
    <string name="decline">Decline</string>
    <string name="start_job1">Start Job</string>
    <string name="finish_the_job">Finish The Job</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="no_request_found">NO REQUEST FOUND</string>
    <string name="paid1">Paid</string>
    <string name="my_rate">Service Price</string>
    <string name="ic_wallet">My Wallet</string>
    <string name="other">Other</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="settings">Settings</string>
    <string name="home_features">Training Information</string>
    <string name="bookings_and_job">Orders &amp; Invoice</string>
    <string name="personal">Personal Information</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="service_txt">Service</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="location_services1">Use Your Location &amp; App List Permission</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="location_screen_txt1">Kamaii Rider will use location in the background to vehicle running, bike rider and partner location on a map.</string>
    <string name="location_screen_txt2">To see the maps for automatically tracked activities, allow Kamaii Rider to use location.</string>
    <string name="location_screen_txt3">Kamaii Rider app need to give permission to share the list of the applications installed on your mobile device.</string>
    <string name="my_incentive">Incentive</string>
    <string name="payable_amount">Cash Diposit</string>
    <string name="earning_wallet">Earning &amp; Wallet</string>
</resources>