<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bookings_and_job"
            android:title="@string/bookings_and_job">
            <menu>


                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home" />

                <item
                    android:id="@+id/nav_cabbookings"
                    android:icon="@drawable/ic_my_orders"
                    android:title="@string/cabbookings" />

                <item
                    android:id="@+id/nav_bookings"
                    android:icon="@drawable/ic_order_summery"
                    android:title="@string/bookings" />
                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/invoice"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_jobs"
                    android:icon="@drawable/ic_jobs"
                    android:title="@string/jobs"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_appointment"
                    android:icon="@drawable/ic_appointment"
                    android:title="@string/my_appoin"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_offline_images"
                    android:icon="@drawable/ic_drawer_video"
                    android:title="@string/imagesoffline" />

            </menu>
        </item>


        <item
            android:id="@+id/nav_earning_wallet"
            android:title="@string/earning_wallet">
            <menu>
                <item
                    android:id="@+id/nav_incentive"
                    android:icon="@drawable/ic_drawer_earning"
                    android:title="@string/my_incentive" />

                <item
                    android:id="@+id/nav_wallet"
                    android:icon="@drawable/ic_drawer_wallet"
                    android:title="@string/ic_wallet" />

                <item
                    android:id="@+id/nav_payment"
                    android:icon="@drawable/ic_drawer_earning"
                    android:title="@string/payable_amount" />

                <item
                    android:id="@+id/nav_profilesetting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"
                    android:visible="false" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_personal"
            android:title="@string/personal">
            <menu>

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_drawer_profile"
                    android:title="@string/my_profile" />

                <item
                    android:id="@+id/nav_vahicle"
                    android:icon="@drawable/delivery_bike"
                    android:title="@string/my_vehicle" />

                <item
                    android:id="@+id/nav_promotion"
                    android:icon="@drawable/ic_promotion"
                    android:title="@string/my_promotion"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_earing"
                    android:icon="@drawable/ic_drawer_earning"
                    android:title="@string/my_earnings" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_features"
            android:title="@string/home_features">
            <menu>


                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/chats"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_service"
                    android:icon="@drawable/ic_drawer_services"
                    android:title="@string/service_txt"
                    android:visible="false" />

                <!--  <item
                      android:id="@+id/nav_doc_upload"
                      android:icon="@drawable/document"
                      android:title="Document" />
  -->
                <item
                    android:id="@+id/nav_tvideo"
                    android:icon="@drawable/ic_drawer_video"
                    android:title="@string/tvideo" />

            </menu>
        </item>
        <item
            android:id="@+id/nav_refer"
            android:title="@string/refer"
            android:visible="false">
            <menu>
                <item
                    android:id="@+id/nav_addrefer"
                    android:icon="@drawable/addrefer"
                    android:title="@string/addrefer" />


                <item
                    android:id="@+id/nav_viewerefer"
                    android:icon="@drawable/addrefer"
                    android:title="@string/viewrefer" />


            </menu>
        </item>

        <item

            android:id="@+id/nav_other"
            android:title="@string/other">
            <menu>

                <item
                    android:id="@+id/nav_language"
                    android:icon="@drawable/ic_drawer_language"
                    android:title="@string/language" />
                <item

                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_drawer_helpline"
                    android:title="@string/help" />
                <item
                    android:id="@+id/nav_notification"
                    android:icon="@drawable/ic_notification"
                    android:title="@string/notifications"
                    android:visible="false" />


                <item
                    android:id="@+id/nav_tickets"
                    android:icon="@drawable/ic_ticket"
                    android:title="@string/support"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_update"
                    android:icon="@drawable/ic_drawer_info"
                    android:title="@string/app_update" />

                <item
                    android:id="@+id/nav_signout"
                    android:icon="@drawable/ic_drawer_logout"
                    android:title="@string/signout" />

            </menu>
        </item>

        <item android:title="">

            <item
                android:id="@+id/nav_madeindia"
                android:title="MADE IN INDIA" />


        </item>
        <!--
                <item
                    android:id="@+id/nav_discount"
                    android:icon="@drawable/ic_discount"
                    android:title="@string/get_discount" />
        -->


    </group>


</menu>