<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/laytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_back_blue">

            <com.kamaii.rider.utils.CustomTextViewBold
                android:id="@+id/ctvbTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Service"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kamaii.rider.utils.CustomEditText
                    android:layout_weight="1"
                    android:id="@+id/etd_serivce_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    android:hint="@string/product_name"

                    android:textColor="@color/black"
                    android:text="" />


                <com.kamaii.rider.utils.CustomEditText
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:id="@+id/etd_service_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_rate"
                    android:inputType="number"
                    android:text="" />



            </LinearLayout>



            <com.kamaii.rider.utils.CustomEditText

                    android:inputType="textMultiLine"
                    android:id="@+id/etd_service_desc"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/gray"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:text="" />




        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.kamaii.rider.utils.CustomTextViewBold
                android:id="@+id/tvdCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cancel1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <com.kamaii.rider.utils.CustomTextViewBold
                android:id="@+id/tvdAdd"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/dialog_btn_blue"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>




    </LinearLayout>

</layout>